EZ-4173 - mobile bug - reduce spacing issues on step 1

--- a/App/PluginWeb/EzBob.Web/Content/css/EverlineCustomerProfile.css
+++ b/App/PluginWeb/EzBob.Web/Content/css/EverlineCustomerProfile.css
@@ -339,14 +339,6 @@ margin-left:0;
 	width: 240px;
 }
 
-.profile-main .profile-widgets .clearfix .clean-btn {
-	width: 130px;
-	height: 35px;
-	float: left;
-	line-height: 30px;
-	text-decoration:none;
-}
-
 .profile-widgets .table {
 	border-collapse: collapse;
 }
